--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         <div class="container">
             <nav class="navbar navbar-expand-lg bg-white navbar-light py-3 py-lg-0">
                 <a href="index.html" class="navbar-brand">
-                    <h1 class="m-0 text-uppercase arial-1" style="align-items: center; display: flex;"><img src="icon/Logo.png" class="me-2" style="height: 60px">Hospital Faustino</h1>
+                    <h1 class="m-0 text-uppercase arial-1 d-flex align-items-center flex-row"><img src="icon/Logo.png" class="me-2" style="height: 60px"><div class="d-none d-xl-flex align-items-center">HOSPITAL FAUSTINO</div></h1>
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
                     <span class="navbar-toggler-icon"></span>
@@ -485,12 +485,12 @@
 
     <!-- Notices Start -->
     <div class="container-fluid py-5">
-        <div class="container">
+        <div class="container px-0">
             <div class="text-center mx-auto mb-5" style="max-width: 500px;">
                 <h5 class="d-inline-block text-primary text-uppercase border-bottom border-5">Noticias</h5>
                 <h1 class="display-4">Ultimas Noticias</h1>
             </div>
-            <div class="owl-carousel price-carousel position-relative" style="padding: 0 45px 45px 45px;">
+            <div class="owl-carousel price-carousel position-relative px-3 px-md-5" style="padding-bottom: 45px;" >
                 <div class="bg-light rounded text-center" style="min-height: 100% !important; height: 100% !important;">
                     <div class="position-relative">
                         <img class="img-fluid rounded-top w-100" src="img/blog-1.png" alt="">
@@ -517,7 +517,7 @@
                     </div>
                     <div class="p-4 text-start">
                         <p class="h3 d-block mb-3 notice-tittle">Día de concientización sobre cáncer de cuello uterino</p>
-                        <p class="m-0 notice-p" style="min-height: 120px;">Este 26 de marzo se conmemora a nivel mundial el Día de Concientización sobre el Cáncer de Cuello Uterino.</p>
+                        <p class="m-0 notice-p" >Este 26 de marzo se conmemora a nivel mundial el Día de Concientización sobre el Cáncer de Cuello Uterino.</p>
                     </div>
                     <a href="https://www.facebook.com/permalink.php?story_fbid=pfbid0S4bCkKb26HrU6tw8HDsRPvnyUMCv2wymTcBHRWFVwZJAMcZ6NEVaMcL1jg97hdcTl&id=100091764969888" class="btn btn-primary rounded-pill mb-5 py-3 px-5 my-2 text-center">Ver Ahora</a>
                 </div>
@@ -617,10 +617,10 @@
                     <h4 class="d-inline-block text-primary text-uppercase border-bottom border-5">Contactanos</h4>
                  </div>
                  <div class="contact-us-list d-inline-flex flex-column justify-content-around" style="min-height: 300px" >
-					 <p class="mb-4" style="font-size: 24px">Conéctate con nosotros para cualquier consulta</p>
-                  <p class="mb-2" style="font-size: 24px"><i class="fa fa-map-marker-alt text-primary me-3"></i>Carretera Central Km 101, Matanzas, Cuba</p>
-                  <p class="mb-2" style="font-size: 24px"><i class="fa fa-envelope text-primary me-3"></i>hospitalfaustino.mtz@infomed.sld.cu</p>
-                  <p class="mb-0" style="font-size: 24px"><i class="fa fa-phone-alt text-primary me-3"></i>+53 5 0994101</p>
+					 <p class="mb-4 contact-item">Conéctate con nosotros para cualquier consulta</p>
+					  <p class="mb-2 contact-item"><i class="fa fa-map-marker-alt text-primary me-3"></i>Carretera Central Km 101, Matanzas, Cuba</p>
+					  <p class="mb-2 contact-item"><i class="fa fa-envelope text-primary me-3"></i>hospitalfaustino.mtz@infomed.sld.cu</p>
+					  <p class="mb-0 contact-item"><i class="fa fa-phone-alt text-primary me-3"></i>+53 5 0994101</p>
                  </div>
               </div>
               <div class="col-md-6">
