--- a/service.html
+++ b/service.html
@@ -266,7 +266,7 @@
                     <div class="mb-4 text-center">
                         <h1 class="display-4">Especialidades que brinda el hospital</h1>
                     </div>
-                    <div class="row gx-5 px-5" style="font-size: 22px;">
+                    <div class="row gx-5  px-lg-5" style="padding-left: 2rem;">
                         <ul class="col-lg-6 mb-0 d-inline-block text-start px-0 px-lg-5">
                             <li>Alergia</li>
                             <li>Anatomía Palológica</li>
