--- a/index.html
+++ b/index.html
@@ -35,14 +35,14 @@
     <div class="container-fluid py-2 border-bottom d-none d-lg-block">
         <div class="container">
             <div class="row">
-                <div class="col-md-6 text-center text-lg-start mb-2 mb-lg-0">
+                <div class="col-md-8 text-center text-lg-start mb-2 mb-lg-0">
                     <div class="d-inline-flex align-items-center">
                         <a class="text-decoration-none text-body pe-3"><i class="bi bi-telephone me-2"></i>+53 5 0994101</a>
                         <span class="text-body">|</span>
                         <a class="text-decoration-none text-body px-3"><i class="bi bi-envelope me-2"></i>hospitalfaustino.mtz@infomed.sld.cu</a>
                     </div>
                 </div>
-                <div class="col-md-6 text-center text-lg-end">
+                <div class="col-md-4 text-center text-lg-end">
                     <div class="d-inline-flex align-items-center">
                         <a class="text-body px-2" target="_blank" href="https://www.facebook.com/people/Hospital-Provincial-Cl%C3%ADnico-Quir%C3%BArgico-Docente-Faustino-P%C3%A9rez/100091764969888/">
                             <i class="fab fa-facebook-f"></i>
@@ -195,7 +195,7 @@
                         </div>
                         <h4 class="mb-3">Cuidado de Emergencia</h4>
                         <p class="m-0">Nuestro equipo experto y compasivo está disponible las 24 horas para brindar atención rápida y salvar vidas.</p>
-                        <a class="btn btn-lg btn-primary rounded-pill" href="">
+                        <a class="btn btn-lg btn-primary rounded-pill" href="" style="display: none;">
                             <i class="bi bi-arrow-right"></i>
                         </a>
                     </div>
@@ -207,7 +207,7 @@
                         </div>
                         <h4 class="mb-3">Operaciones y Cirugias</h4>
                         <p class="m-0">Expertos en operaciones quirúrgicas con habilidades precisas y compromiso con la seguridad del paciente. Listo para contribuir al éxito del equipo médico.</p>
-                        <a class="btn btn-lg btn-primary rounded-pill" href="">
+                        <a class="btn btn-lg btn-primary rounded-pill" href="" style="display: none;">
                             <i class="bi bi-arrow-right"></i>
                         </a>
                     </div>
@@ -219,7 +219,7 @@
                         </div>
                       <h4 class="mb-3">Seguimiento</h4>
                         <p class="m-0">Proporcionamos seguimiento médico continuo y personalizado para garantizar su salud a largo plazo y mantener su bienestar óptimo.</p>
-                        <a class="btn btn-lg btn-primary rounded-pill" href="">
+                        <a class="btn btn-lg btn-primary rounded-pill" href=""  style="display: none;">
                             <i class="bi bi-arrow-right"></i>
                         </a>
                     </div>
@@ -231,7 +231,7 @@
                         </div>
                         <h4 class="mb-3">Servicio de Ambulancia</h4>
                         <p class="m-0">Brindamos asistencia inmediata y traslados seguros a los servicios de urgencias hospitalarios.</p>
-                        <a class="btn btn-lg btn-primary rounded-pill" href="">
+                        <a class="btn btn-lg btn-primary rounded-pill" href="" style="display: none;">
                             <i class="bi bi-arrow-right"></i>
                         </a>
                     </div>
@@ -243,7 +243,7 @@
                         </div>
                         <h4 class="mb-3">Medicinas y Farmacia</h4>
                         <p class="m-0">Ofrecemos selección, preparación, control y dispensación de medicamentos, garantizando una atención farmacéutica de calidad</p>
-                        <a class="btn btn-lg btn-primary rounded-pill" href="">
+                        <a class="btn btn-lg btn-primary rounded-pill" href="" style="display: none;">
                             <i class="bi bi-arrow-right"></i>
                         </a>
                     </div>
@@ -255,7 +255,7 @@
                         </div>
                         <h4 class="mb-3">Examen de Sangre</h4>
                         <p class="m-0">Ofrecemos análisis de sangre, detección temprana y seguimiento de enfermedades sanguíneas</p>
-                        <a class="btn btn-lg btn-primary rounded-pill" href="">
+                        <a class="btn btn-lg btn-primary rounded-pill" href="" style="display: none;">
                             <i class="bi bi-arrow-right"></i>
                         </a>
                     </div>
@@ -353,9 +353,9 @@
                                 <p class="m-0">Dermatólogo experimentado que se especializa en tratar trastornos de la piel, cabello, uñas y membranas mucosas. Atiende tanto a adultos como a niños</p>
                             </div>
                             <div class="d-flex mt-auto border-top p-4">
-                                <a class="btn btn-lg btn-primary btn-lg-square rounded-circle me-3" href="#"><i class="fab fa-twitter"></i></a>
-                                <a class="btn btn-lg btn-primary btn-lg-square rounded-circle me-3" href="#"><i class="fab fa-facebook-f"></i></a>
-                                <a class="btn btn-lg btn-primary btn-lg-square rounded-circle" href="#"><i class="fab fa-linkedin-in"></i></a>
+                                <a class="btn btn-lg btn-color btn-lg-square rounded-circle me-3" href="#"><i class="fab fa-twitter"></i></a>
+                                <a class="btn btn-lg btn-color btn-lg-square rounded-circle me-3" href="#"><i class="fab fa-facebook-f"></i></a>
+                                <a class="btn btn-lg btn-color btn-lg-square rounded-circle" href="#"><i class="fab fa-linkedin-in"></i></a>
                             </div>
                         </div>
                     </div>
@@ -372,9 +372,9 @@
                                 <p class="m-0">Especializado en tratar infecciones difíciles de diagnosticar o tratar. Su enfoque está en enfermedades infecciosas y su manejo.</p>
                             </div>
                             <div class="d-flex mt-auto border-top p-4">
-                                <a class="btn btn-lg btn-primary btn-lg-square rounded-circle me-3" href="#"><i class="fab fa-twitter"></i></a>
-                                <a class="btn btn-lg btn-primary btn-lg-square rounded-circle me-3" href="#"><i class="fab fa-facebook-f"></i></a>
-                                <a class="btn btn-lg btn-primary btn-lg-square rounded-circle" href="#"><i class="fab fa-linkedin-in"></i></a>
+                                <a class="btn btn-lg btn-color btn-lg-square rounded-circle me-3" href="#"><i class="fab fa-twitter"></i></a>
+                                <a class="btn btn-lg btn-color btn-lg-square rounded-circle me-3" href="#"><i class="fab fa-facebook-f"></i></a>
+                                <a class="btn btn-lg btn-color btn-lg-square rounded-circle" href="#"><i class="fab fa-linkedin-in"></i></a>
                             </div>
                         </div>
                     </div>
@@ -391,9 +391,9 @@
                                 <p class="m-0">Gastroenteróloga dedicada al estudio y tratamiento del sistema digestivo. Realiza procedimientos como colonoscopias, endoscopias y biopsias del hígado.</p>
                             </div>
                             <div class="d-flex mt-auto border-top p-4">
-                                <a class="btn btn-lg btn-primary btn-lg-square rounded-circle me-3" href="#"><i class="fab fa-twitter"></i></a>
-                                <a class="btn btn-lg btn-primary btn-lg-square rounded-circle me-3" href="#"><i class="fab fa-facebook-f"></i></a>
-                                <a class="btn btn-lg btn-primary btn-lg-square rounded-circle" href="#"><i class="fab fa-linkedin-in"></i></a>
+                                <a class="btn btn-lg btn-color btn-lg-square rounded-circle me-3" href="#"><i class="fab fa-twitter"></i></a>
+                                <a class="btn btn-lg btn-color btn-lg-square rounded-circle me-3" href="#"><i class="fab fa-facebook-f"></i></a>
+                                <a class="btn btn-lg btn-color btn-lg-square rounded-circle" href="#"><i class="fab fa-linkedin-in"></i></a>
                             </div>
                         </div>
                     </div>
@@ -499,7 +499,7 @@
                         <p class="h3 d-block mb-3 notice-tittle">Representantes del Centro Cristiano de Reflexión y Diálogo</p>
                         <p class="m-0 notice-p">Cuba, entrega donación de 20 kits de productos de higiene y aseo. La donación se destinará para los varios servicios médicos que se brindan en la institución contribuyendo a su mejora y beneficio de los pacientes y personal médico. </p>
                     </div>
-                    <a href="https://www.facebook.com/permalink.php?story_fbid=pfbid02MFLet7UEfGKCcF5pE6UzM5nm5Aozcxb8LAqYADrnJCv9pmc5XfienQdCssMNmK9fl&id=100091764969888" class="btn btn-primary rounded-pill mb-5 py-3 px-5 my-2 text-center">Ver Ahora</a>
+                    <a href="https://www.facebook.com/permalink.php?story_fbid=pfbid02MFLet7UEfGKCcF5pE6UzM5nm5Aozcxb8LAqYADrnJCv9pmc5XfienQdCssMNmK9fl&id=100091764969888" class="btn btn-color rounded-pill mb-5 py-3 px-5 my-2 text-center">Ver Ahora</a>
                 </div>
                 <div class="bg-light rounded text-center">
                     <div class="position-relative">
@@ -509,7 +509,7 @@
                         <p class="h3 d-block mb-3 notice-tittle" >Investigación en Cirugía General: Competencias y Desarrollo Local</p>
                         <p class="m-0 notice-p" >La Dra. Gretter expone su investigación doctoral sobre las competencias investigativas en Cirugía General en el II Taller Internacional de Gestión de Capacidades.</p>
                     </div>
-                    <a href="https://www.facebook.com/permalink.php?story_fbid=pfbid0y87wVXhGUe2UW3rEzz7vzHDTtg8jWVUAcBHukpCiaJhH3QKZU83teWvoR6aG3X9el&id=100091764969888" class="btn btn-primary rounded-pill mb-5 py-3 px-5 my-2 text-center">Ver Ahora</a>
+                    <a href="https://www.facebook.com/permalink.php?story_fbid=pfbid0y87wVXhGUe2UW3rEzz7vzHDTtg8jWVUAcBHukpCiaJhH3QKZU83teWvoR6aG3X9el&id=100091764969888" class="btn btn-color rounded-pill mb-5 py-3 px-5 my-2 text-center">Ver Ahora</a>
                 </div>
                 <div class="bg-light rounded text-center">
                     <div class="position-relative">
@@ -519,7 +519,7 @@
                         <p class="h3 d-block mb-3 notice-tittle">Día de concientización sobre cáncer de cuello uterino</p>
                         <p class="m-0 notice-p" >Este 26 de marzo se conmemora a nivel mundial el Día de Concientización sobre el Cáncer de Cuello Uterino.</p>
                     </div>
-                    <a href="https://www.facebook.com/permalink.php?story_fbid=pfbid0S4bCkKb26HrU6tw8HDsRPvnyUMCv2wymTcBHRWFVwZJAMcZ6NEVaMcL1jg97hdcTl&id=100091764969888" class="btn btn-primary rounded-pill mb-5 py-3 px-5 my-2 text-center">Ver Ahora</a>
+                    <a href="https://www.facebook.com/permalink.php?story_fbid=pfbid0S4bCkKb26HrU6tw8HDsRPvnyUMCv2wymTcBHRWFVwZJAMcZ6NEVaMcL1jg97hdcTl&id=100091764969888" class="btn btn-color rounded-pill mb-5 py-3 px-5 my-2 text-center">Ver Ahora</a>
                 </div>
                 <div class="bg-light rounded text-center">
                     <div class="position-relative">
@@ -529,7 +529,7 @@
                         <p class="h3 d-block mb-3 notice-tittle" >Bienvenida en nuestra institución al DrC. Armando Leal Mursuli</p>
                         <p class="m-0 notice-p" > Bienvenida en nuestra institución al DrC. Armando Leal Mursuli, secretario del grupo nacional de cirugía y miembro de la SCC; Dr. Carlos Díaz Mayo vicepresidente de la Sociedad Cuba de Cirugía.</p>
                     </div>
-                    <a href="https://www.facebook.com/permalink.php?story_fbid=pfbid02w2nbj9HVdKn1LP3nVjez2g1i22Sf9UDFYLCNQvy55Awtg8reLG6YPhHgZyP1M7p7l&id=100091764969888" class="btn btn-primary rounded-pill mb-5 py-3 px-5 my-2 text-center">Ver Ahora</a>
+                    <a href="https://www.facebook.com/permalink.php?story_fbid=pfbid02w2nbj9HVdKn1LP3nVjez2g1i22Sf9UDFYLCNQvy55Awtg8reLG6YPhHgZyP1M7p7l&id=100091764969888" class="btn btn-color rounded-pill mb-5 py-3 px-5 my-2 text-center">Ver Ahora</a>
                 </div>
                
             </div>
@@ -664,19 +664,19 @@
                 <div class="col-lg-3 col-md-6">
                     <h4 class="d-inline-block text-primary text-uppercase border-bottom border-5 border-secondary mb-4">Sitios relacionados&nbsp;</h4>
                     <div class="d-flex flex-column justify-content-start">
-                        <a class="text-light mb-2" href="https://www.sld.cu/"><i class="fa fa-angle-right me-2"></i>Infomed</a>
-                        <a class="text-light mb-2" href="https://bmns.sld.cu/"><i class="fa fa-angle-right me-2"></i>Biblioteca Medica Nacional</a>
-                        <a class="text-light mb-2" href="http://www.smcsalud.cu/"><i class="fa fa-angle-right me-2"></i>Servicios Medicos Cubanos</a>
-                        <a class="text-light mb-2" href="http://mesaredonda.cubadebate.cu/"><i class="fa fa-angle-right me-2"></i>Mesa Redonda </a>
+                        <a class="text-light grow-text mb-2" href="https://www.sld.cu/"><i class="fa fa-angle-right me-2"></i>Infomed</a>
+                        <a class="text-light grow-text mb-2" href="https://bmns.sld.cu/"><i class="fa fa-angle-right me-2"></i>Biblioteca Medica Nacional</a>
+                        <a class="text-light grow-text mb-2" href="http://www.smcsalud.cu/"><i class="fa fa-angle-right me-2"></i>Servicios Medicos Cubanos</a>
+                        <a class="text-light grow-text mb-2" href="http://mesaredonda.cubadebate.cu/"><i class="fa fa-angle-right me-2"></i>Mesa Redonda </a>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6">
                     <h4 class="d-inline-block text-primary text-uppercase border-bottom border-5 border-secondary mb-4">Síguenos</h4>
                     <div class="d-flex">
-                        <a class="btn btn-lg btn-primary btn-lg-square rounded-circle me-2" target="_blank" href="#"><i class="fab fa-twitter"></i></a>
-                        <a class="btn btn-lg btn-primary btn-lg-square rounded-circle me-2" target="_blank" href="https://www.facebook.com/people/Hospital-Provincial-Cl%C3%ADnico-Quir%C3%BArgico-Docente-Faustino-P%C3%A9rez/100091764969888/"><i class="fab fa-facebook-f"></i></a>
-                        <a class="btn btn-lg btn-primary btn-lg-square rounded-circle me-2" target="_blank" href="#"><i class="fab fa-linkedin-in"></i></a>
-                        <a class="btn btn-lg btn-primary btn-lg-square rounded-circle" target="_blank" href="#"><i class="fab fa-instagram"></i></a>
+                        <a class="btn btn-lg btn-color btn-lg-square rounded-circle me-2" target="_blank" href="#"><i class="fab fa-twitter"></i></a>
+                        <a class="btn btn-lg btn-color btn-lg-square rounded-circle me-2" target="_blank" href="https://www.facebook.com/people/Hospital-Provincial-Cl%C3%ADnico-Quir%C3%BArgico-Docente-Faustino-P%C3%A9rez/100091764969888/"><i class="fab fa-facebook-f"></i></a>
+                        <a class="btn btn-lg btn-color btn-lg-square rounded-circle me-2" target="_blank" href="#"><i class="fab fa-linkedin-in"></i></a>
+                        <a class="btn btn-lg btn-color btn-lg-square rounded-circle" target="_blank" href="#"><i class="fab fa-instagram"></i></a>
                     </div>
                 </div>
             </div>
