--- a/service.html
+++ b/service.html
@@ -35,14 +35,14 @@
     <div class="container-fluid py-2 border-bottom d-none d-lg-block">
         <div class="container">
             <div class="row">
-                <div class="col-md-6 text-center text-lg-start mb-2 mb-lg-0">
+                <div class="col-md-8 text-center text-lg-start mb-2 mb-lg-0">
                     <div class="d-inline-flex align-items-center">
                         <a class="text-decoration-none text-body pe-3"><i class="bi bi-telephone me-2"></i>+53 5 0994101</a>
                         <span class="text-body">|</span>
                         <a class="text-decoration-none text-body px-3"><i class="bi bi-envelope me-2"></i>hospitalfaustino.mtz@infomed.sld.cu</a>
                     </div>
                 </div>
-                <div class="col-md-6 text-center text-lg-end">
+                <div class="col-md-4 text-center text-lg-end">
                     <div class="d-inline-flex align-items-center">
                         <a class="text-body px-2" target="_blank" href="https://www.facebook.com/people/Hospital-Provincial-Cl%C3%ADnico-Quir%C3%BArgico-Docente-Faustino-P%C3%A9rez/100091764969888/">
                             <i class="fab fa-facebook-f"></i>
@@ -72,7 +72,7 @@
         <div class="container">
             <nav class="navbar navbar-expand-lg bg-white navbar-light py-3 py-lg-0">
                 <a href="index.html" class="navbar-brand">
-                    <h1 class="m-0 text-uppercase arial-1" style="align-items: center; display: flex;"><img src="icon/Logo.png" class="me-2" style="height: 60px">Hospital Faustino</h1>
+                    <h1 class="m-0 text-uppercase arial-1 d-flex align-items-center flex-row"><img src="icon/Logo.png" class="me-2" style="height: 60px"><div class="d-none d-xl-flex align-items-center">HOSPITAL FAUSTINO</div></h1>
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
                     <span class="navbar-toggler-icon"></span>
@@ -96,7 +96,7 @@
                                 <a href="search.html" class="dropdown-item">Buscar</a>
                             </div>
                         </div>
-                        <a href="contact.html" class="nav-item nav-link">Contactos</a>
+                        <a href="contact.html" class="nav-item nav-link">Contacto</a>
                     </div>
                 </div>
             </nav>
@@ -398,19 +398,19 @@
                 <div class="col-lg-3 col-md-6">
                     <h4 class="d-inline-block text-primary text-uppercase border-bottom border-5 border-secondary mb-4">Sitios relacionados&nbsp;</h4>
                     <div class="d-flex flex-column justify-content-start">
-                        <a class="text-light mb-2" href="https://www.sld.cu/"><i class="fa fa-angle-right me-2"></i>Infomed</a>
-                        <a class="text-light mb-2" href="https://bmns.sld.cu/"><i class="fa fa-angle-right me-2"></i>Biblioteca Medica Nacional</a>
-                        <a class="text-light mb-2" href="http://www.smcsalud.cu/"><i class="fa fa-angle-right me-2"></i>Servicios Medicos Cubanos</a>
-                        <a class="text-light mb-2" href="http://mesaredonda.cubadebate.cu/"><i class="fa fa-angle-right me-2"></i>Mesa Redonda </a>
+                        <a class="text-light grow-text mb-2" href="https://www.sld.cu/"><i class="fa fa-angle-right me-2"></i>Infomed</a>
+                        <a class="text-light grow-text mb-2" href="https://bmns.sld.cu/"><i class="fa fa-angle-right me-2"></i>Biblioteca Medica Nacional</a>
+                        <a class="text-light grow-text mb-2" href="http://www.smcsalud.cu/"><i class="fa fa-angle-right me-2"></i>Servicios Medicos Cubanos</a>
+                        <a class="text-light grow-text mb-2" href="http://mesaredonda.cubadebate.cu/"><i class="fa fa-angle-right me-2"></i>Mesa Redonda </a>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6">
                     <h4 class="d-inline-block text-primary text-uppercase border-bottom border-5 border-secondary mb-4">Síguenos</h4>
                     <div class="d-flex">
-                        <a class="btn btn-lg btn-primary btn-lg-square rounded-circle me-2" href="#"><i class="fab fa-twitter"></i></a>
-                        <a class="btn btn-lg btn-primary btn-lg-square rounded-circle me-2" href="https://www.facebook.com/people/Hospital-Provincial-Cl%C3%ADnico-Quir%C3%BArgico-Docente-Faustino-P%C3%A9rez/100091764969888/"><i class="fab fa-facebook-f"></i></a>
-                        <a class="btn btn-lg btn-primary btn-lg-square rounded-circle me-2" href="#"><i class="fab fa-linkedin-in"></i></a>
-                        <a class="btn btn-lg btn-primary btn-lg-square rounded-circle" href="#"><i class="fab fa-instagram"></i></a>
+                        <a class="btn btn-lg btn-color btn-lg-square rounded-circle me-2" target="_blank" href="#"><i class="fab fa-twitter"></i></a>
+                        <a class="btn btn-lg btn-color btn-lg-square rounded-circle me-2" target="_blank" href="https://www.facebook.com/people/Hospital-Provincial-Cl%C3%ADnico-Quir%C3%BArgico-Docente-Faustino-P%C3%A9rez/100091764969888/"><i class="fab fa-facebook-f"></i></a>
+                        <a class="btn btn-lg btn-color btn-lg-square rounded-circle me-2" target="_blank" href="#"><i class="fab fa-linkedin-in"></i></a>
+                        <a class="btn btn-lg btn-color btn-lg-square rounded-circle" target="_blank" href="#"><i class="fab fa-instagram"></i></a>
                     </div>
                 </div>
             </div>
