--- a/mision.html
+++ b/mision.html
@@ -82,8 +82,15 @@
                         <a href="index.html" class="nav-item nav-link active">Inicio</a>
                         <a href="about.html" class="nav-item nav-link">Nosotros</a>
                         <a href="service.html" class="nav-item nav-link">Servicios</a>
-                        <a href="price.html" class="nav-item nav-link">Estructura</a>
+                        <a href="structure.html" class="nav-item nav-link">Estructura</a>
                         <div class="nav-item dropdown">
+                            <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Docencia</a>
+                            <div class="dropdown-menu m-0">
+                                <a href="pregrado.html" class="dropdown-item">Pregrado</a>
+                                <a href="posgrado.html" class="dropdown-item">Posgrado</a>
+                            </div>
+                        </div>
+                        <div class="nav-item dropdown" style="display: none;">
                             <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Páginas</a>
                             <div class="dropdown-menu m-0">
                                 <a href="blog.html" class="dropdown-item">Historia</a>
