--- a/service.html
+++ b/service.html
@@ -72,7 +72,7 @@
         <div class="container">
             <nav class="navbar navbar-expand-lg bg-white navbar-light py-3 py-lg-0">
                 <a href="index.html" class="navbar-brand">
-                    <h1 class="m-0 text-uppercase arial-1 d-flex align-items-center flex-row"><img src="icon/Logo.png" class="me-2" style="height: 60px"><div class="d-none d-xl-flex align-items-center">HOSPITAL FAUSTINO</div></h1>
+                    <h1 class="m-0 text-uppercase arial-1 d-flex align-items-center flex-row" style="font-size: 0.9cm !important;"><img src="icon/Logo.png" class="me-2" style="height: 60px"><div class="d-none d-xl-flex align-items-center">HOSPITAL FAUSTINO</div></h1>
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
                     <span class="navbar-toggler-icon"></span>
@@ -82,8 +82,15 @@
                         <a href="index.html" class="nav-item nav-link">Inicio</a>
                         <a href="about.html" class="nav-item nav-link">Nosotros</a>
                         <a href="service.html" class="nav-item nav-link active">Servicios</a>
-                        <a href="price.html" class="nav-item nav-link">Estructura</a>
+                        <a href="structure.html" class="nav-item nav-link">Estructura</a>
                         <div class="nav-item dropdown">
+                            <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Docencia</a>
+                            <div class="dropdown-menu m-0">
+                                <a href="pregrado.html" class="dropdown-item">Pregrado</a>
+                                <a href="posgrado.html" class="dropdown-item">Posgrado</a>
+                            </div>
+                        </div>
+                        <div class="nav-item dropdown" style="display: none;">
                             <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Páginas</a>
                             <div class="dropdown-menu m-0">
                                 <a href="blog.html" class="dropdown-item">Historia</a>
@@ -268,7 +275,7 @@
                     </div>
                     <div class="row gx-5  px-lg-5" style="padding-left: 2rem;">
                         <ul class="col-lg-6 mb-0 d-inline-block text-start px-0 px-lg-5">
-                            <li>Alergia</li>
+                            <li>Alergía</li>
                             <li>Anatomía Palológica</li>
                             <li>Anestesiología y Reanimación</li>
                             <li>Angiología y Cirugía Vascular</li>
@@ -387,12 +394,11 @@
                 <div class="col-lg-3 col-md-6">
                     <h4 class="d-inline-block text-primary text-uppercase border-bottom border-5 border-secondary mb-4">Enlaces Rápidos</h4>
                     <div class="d-flex flex-column justify-content-start">
-                        <a class="text-light mb-2" href="#"><i class="fa fa-angle-right me-2"></i>Inicio</a>
-                        <a class="text-light mb-2" href="#"><i class="fa fa-angle-right me-2"></i>Nosotros</a>
-                        <a class="text-light mb-2" href="#"><i class="fa fa-angle-right me-2"></i>Servicios</a>
-                        <a class="text-light mb-2" href="#"><i class="fa fa-angle-right me-2"></i>Nuestro Equipo</a>
-                        <a class="text-light mb-2" href="#"><i class="fa fa-angle-right me-2"></i>Publicaciones</a>
-                        <a class="text-light" href="#"><i class="fa fa-angle-right me-2"></i>Contactos</a>
+                        <a class="text-light grow-text mb-2" href="index.html"><i class="fa fa-angle-right me-2"></i>Inicio</a>
+                        <a class="text-light grow-text mb-2" href="about.html"><i class="fa fa-angle-right me-2"></i>Nosotros</a>
+                        <a class="text-light grow-text mb-2" href="service.html"><i class="fa fa-angle-right me-2"></i>Servicios</a>
+                        <a class="text-light grow-text mb-2" href="structure.html"><i class="fa fa-angle-right me-2"></i>Nuestro Equipo</a>
+                        <a class="text-light grow-text" href="contact.html"><i class="fa fa-angle-right me-2"></i>Contactos</a>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6">
