--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         <div class="container">
             <nav class="navbar navbar-expand-lg bg-white navbar-light py-3 py-lg-0">
                 <a href="index.html" class="navbar-brand">
-                    <h1 class="m-0 text-uppercase arial-1 d-flex align-items-center flex-row"><img src="icon/Logo.png" class="me-2" style="height: 60px"><div class="d-none d-xl-flex align-items-center">HOSPITAL FAUSTINO</div></h1>
+                    <h1 class="m-0 text-uppercase arial-1 d-flex align-items-center flex-row" style="font-size: 0.9cm !important;"><img src="icon/Logo.png" class="me-2" style="height: 60px"><div class="d-none d-xl-flex align-items-center">HOSPITAL FAUSTINO</div></h1>
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
                     <span class="navbar-toggler-icon"></span>
@@ -82,8 +82,15 @@
                         <a href="index.html" class="nav-item nav-link active">Inicio</a>
                         <a href="about.html" class="nav-item nav-link">Nosotros</a>
                         <a href="service.html" class="nav-item nav-link">Servicios</a>
-                        <a href="price.html" class="nav-item nav-link">Estructura</a>
+                        <a href="structure.html" class="nav-item nav-link">Estructura</a>
                         <div class="nav-item dropdown">
+                            <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Docencia</a>
+                            <div class="dropdown-menu m-0">
+                                <a href="pregrado.html" class="dropdown-item">Pregrado</a>
+                                <a href="posgrado.html" class="dropdown-item">Posgrado</a>
+                            </div>
+                        </div>
+                        <div class="nav-item dropdown" style="display: none;">
                             <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Páginas</a>
                             <div class="dropdown-menu m-0">
                                 <a href="blog.html" class="dropdown-item">Historia</a>
@@ -113,11 +120,9 @@
                     <h5 class="d-inline-block text-primary text-uppercase border-bottom border-5" style="border-color: rgba(256, 256, 256, .3) !important;">Bienvenidos</h5>
                     <div class="hero-container">
                         <h1 class="display-1 mb-md-4 ">
-                            <p class="p-hero" style="gap: 30px ;">
+                            <p class="p-hero" >
                                 <span class="arial-1  ">Hospital Provincial</span>
-                                <br>
                                 <span class="arial-2">Clínico&middot; Quirúrgico&middot; Docente</span>
-                                <br>
                                 <span class="arial-3">Faustino Pérez</span>
                             </p>
                         </h1>
@@ -139,7 +144,7 @@
             <div class="row gx-5">
                 <div class="col-lg-5 mb-5 mb-lg-0" style="min-height: 500px;">
                     <div class="position-relative h-100">
-                        <img class="position-absolute w-100 h-100 rounded" src="img/about.jpg" style="object-fit: cover;">
+                        <img class="position-absolute w-100 h-100 rounded" src="img/about.jpg" style="object-fit: cover; aspect-ratio: 16/9">
                     </div>
                 </div>
                 <div class="col-lg-7">
@@ -344,7 +349,7 @@
                 <div class="team-item">
                     <div class="row g-0 bg-light rounded overflow-hidden">
                         <div class="col-12 col-sm-5 h-100">
-                            <img class="img-fluid h-100" src="img/team-1.jpg" style="object-fit: cover;">
+                            <img class="img-fluid h-100" src="img/team-1.jpg" style="object-fit: cover; aspect-ratio: 16/9;">
                         </div>
                         <div class="col-12 col-sm-7 h-100 d-flex flex-column">
                             <div class="mt-auto p-4">
@@ -363,7 +368,7 @@
                 <div class="team-item">
                     <div class="row g-0 bg-light rounded overflow-hidden">
                         <div class="col-12 col-sm-5 h-100">
-                            <img class="img-fluid h-100" src="img/team-2.jpg" style="object-fit: cover;">
+                            <img class="img-fluid h-100" src="img/team-2.jpg" style="object-fit: cover; aspect-ratio: 16/9;">
                         </div>
                         <div class="col-12 col-sm-7 h-100 d-flex flex-column">
                             <div class="mt-auto p-4">
@@ -382,7 +387,7 @@
                 <div class="team-item">
                     <div class="row g-0 bg-light rounded overflow-hidden">
                         <div class="col-12 col-sm-5 h-100">
-                            <img class="img-fluid h-100" src="img/team-3.jpg" style="object-fit: cover;">
+                            <img class="img-fluid h-100" src="img/team-3.jpg" style="object-fit: cover; aspect-ratio: 16/9;">
                         </div>
                         <div class="col-12 col-sm-7 h-100 d-flex flex-column">
                             <div class="mt-auto p-4">
@@ -493,7 +498,7 @@
             <div class="owl-carousel price-carousel position-relative px-3 px-md-5" style="padding-bottom: 45px;" >
                 <div class="bg-light rounded text-center" style="min-height: 100% !important; height: 100% !important;">
                     <div class="position-relative">
-                        <img class="img-fluid rounded-top w-100" src="img/blog-1.png" alt="">
+                        <img class="img-fluid rounded-top w-100" src="img/blog-1.jpg" style="aspect-ratio: 16/9;" alt="">
                     </div>
                     <div class="p-4 text-start">
                         <p class="h3 d-block mb-3 notice-tittle">Representantes del Centro Cristiano de Reflexión y Diálogo</p>
@@ -503,7 +508,7 @@
                 </div>
                 <div class="bg-light rounded text-center">
                     <div class="position-relative">
-                        <img class="img-fluid rounded-top w-100" src="img/blog-2.png" alt="">
+                        <img class="img-fluid rounded-top w-100" src="img/blog-2.jpg" style="aspect-ratio: 16/9;" alt="">
                     </div>
                     <div class="p-4 text-start">
                         <p class="h3 d-block mb-3 notice-tittle" >Investigación en Cirugía General: Competencias y Desarrollo Local</p>
@@ -513,7 +518,7 @@
                 </div>
                 <div class="bg-light rounded text-center">
                     <div class="position-relative">
-                        <img class="img-fluid rounded-top w-100" src="img/blog-3.png" alt="">
+                        <img class="img-fluid rounded-top w-100" src="img/blog-3.jpg" style="aspect-ratio: 16/9;" alt="">
                     </div>
                     <div class="p-4 text-start">
                         <p class="h3 d-block mb-3 notice-tittle">Día de concientización sobre cáncer de cuello uterino</p>
@@ -523,7 +528,7 @@
                 </div>
                 <div class="bg-light rounded text-center">
                     <div class="position-relative">
-                        <img class="img-fluid rounded-top w-100" src="img/blog-4.png" alt="">
+                        <img class="img-fluid rounded-top w-100" src="img/blog-4.jpg" style="aspect-ratio: 16/9;" alt="">
                     </div>
                     <div class="p-4 text-start">
                         <p class="h3 d-block mb-3 notice-tittle" >Bienvenida en nuestra institución al DrC. Armando Leal Mursuli</p>
@@ -653,12 +658,11 @@
                 <div class="col-lg-3 col-md-6">
                     <h4 class="d-inline-block text-primary text-uppercase border-bottom border-5 border-secondary mb-4">Enlaces Rápidos</h4>
                     <div class="d-flex flex-column justify-content-start">
-                        <a class="text-light mb-2" href="#"><i class="fa fa-angle-right me-2"></i>Inicio</a>
-                        <a class="text-light mb-2" href="#"><i class="fa fa-angle-right me-2"></i>Nosotros</a>
-                        <a class="text-light mb-2" href="#"><i class="fa fa-angle-right me-2"></i>Servicios</a>
-                        <a class="text-light mb-2" href="#"><i class="fa fa-angle-right me-2"></i>Nuestro Equipo</a>
-                        <a class="text-light mb-2" href="#"><i class="fa fa-angle-right me-2"></i>Publicaciones</a>
-                        <a class="text-light" href="#"><i class="fa fa-angle-right me-2"></i>Contactos</a>
+                        <a class="text-light grow-text mb-2" href="index.html"><i class="fa fa-angle-right me-2"></i>Inicio</a>
+                        <a class="text-light grow-text mb-2" href="about.html"><i class="fa fa-angle-right me-2"></i>Nosotros</a>
+                        <a class="text-light grow-text mb-2" href="service.html"><i class="fa fa-angle-right me-2"></i>Servicios</a>
+                        <a class="text-light grow-text mb-2" href="structure.html"><i class="fa fa-angle-right me-2"></i>Nuestro Equipo</a>
+                        <a class="text-light grow-text" href="contact.html"><i class="fa fa-angle-right me-2"></i>Contactos</a>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6">
