--- a/structure.html
+++ b/structure.html
@@ -82,7 +82,7 @@
                         <a href="index.html" class="nav-item nav-link">Inicio</a>
                         <a href="about.html" class="nav-item nav-link">Nosotros</a>
                         <a href="service.html" class="nav-item nav-link">Servicios</a>
-                        <a href="structure.html" class="nav-item nav-link">Estructura</a>
+                        <a href="structure.html" class="nav-item nav-link active">Estructura</a>
                         <div class="nav-item dropdown">
                             <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Docencia</a>
                             <div class="dropdown-menu m-0">
@@ -103,7 +103,7 @@
                                 <a href="search.html" class="dropdown-item">Buscar</a>
                             </div>
                         </div>
-                        <a href="contact.html" class="nav-item nav-link active">Contacto</a>
+                        <a href="contact.html" class="nav-item nav-link">Contacto</a>
                     </div>
                 </div>
             </nav>
@@ -112,77 +112,75 @@
     <!-- Navbar End -->
 
 
-    <!-- Contact Start -->
-    <div class="container-fluid pt-5">
+    <!-- Team Start -->
+    <div class="container-fluid py-5">
         <div class="container">
             <div class="text-center mx-auto mb-5" style="max-width: 600px;">
-                <h5 class="d-inline-block text-primary text-uppercase border-bottom border-5">Contacto</h5>
-                <h1 class="display-4">Siéntase libre de contactarnos</h1>
+                <h5 class="d-inline-block text-primary text-uppercase border-bottom border-5">Nuestros Doctores</h5>
+                <h1 class="display-4">Profesionales de la Salud </h1>
             </div>
-            <div class="row g-5 mb-5">
-                <div class="col-lg-4">
-                    <div class="bg-light rounded d-flex flex-column align-items-center justify-content-center text-center" style="height: 200px;">
-                        <div class="d-flex align-items-center justify-content-center btn-color rounded-circle mb-4" style="width: 100px; height: 70px; transform: rotate(-15deg);">
-                            <i class="fa fa-2x fa-location-arrow text-white" style="transform: rotate(15deg);"></i>
+            <div class="owl-carousel team-carousel position-relative">
+                <div class="team-item">
+                    <div class="row g-0 bg-light rounded overflow-hidden">
+                        <div class="col-12 col-sm-5 h-100">
+                            <img class="img-fluid h-100" src="img/team-1.jpg" style="object-fit: cover;">
                         </div>
-                        <h6 class="mb-0">Carretera Central Km 101, Matanzas, Cuba</h6>
-                    </div>
-                </div>
-                <div class="col-lg-4">
-                    <div class="bg-light rounded d-flex flex-column align-items-center justify-content-center text-center" style="height: 200px;">
-                        <div class="d-flex align-items-center justify-content-center btn-color rounded-circle mb-4" style="width: 100px; height: 70px; transform: rotate(-15deg);">
-                            <i class="fa fa-2x fa-phone text-white" style="transform: rotate(15deg);"></i>
-                        </div>
-                        <h6 class="mb-0">+53 5 0994101</h6>
-                    </div>
-                </div>
-                <div class="col-lg-4">
-                    <div class="bg-light rounded d-flex flex-column align-items-center justify-content-center text-center" style="height: 200px;">
-                        <div class="d-flex align-items-center justify-content-center btn-color rounded-circle mb-4" style="width: 100px; height: 70px; transform: rotate(-15deg);">
-                            <i class="fa fa-2x fa-envelope-open text-white" style="transform: rotate(15deg);"></i>
-                        </div>
-                        <h6 class="mb-0">hospitalfaustino.mtz@infomed.sld.cu</h6>
-                    </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-12" style="height: 500px;">
-                    <div class="position-relative h-100">
-                        <iframe class="position-relative w-100 h-100"
-                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d5192.078036444757!2d-81.6009349329118!3d23.047494972851034!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88d2fc090fc104d1%3A0xbc0d2469be7baa45!2sHospital%20Faustino%20P%C3%A9rez.!5e0!3m2!1ses-419!2scu!4v1710186013616!5m2!1ses-419!2scu"
-                            frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false"
-                            tabindex="0"></iframe>
-                    </div>
-                </div>
-            </div>
-            <div class="row justify-content-center position-relative" style="margin-top: -200px; z-index: 1; display: none">
-                <div class="col-lg-8">
-                    <div class="bg-white rounded p-5 m-5 mb-0">
-                        <form>
-                            <div class="row g-3">
-                                <div class="col-12 col-sm-6">
-                                    <input type="text" class="form-control bg-light border-0" placeholder="Your Name" style="height: 55px;">
-                                </div>
-                                <div class="col-12 col-sm-6">
-                                    <input type="email" class="form-control bg-light border-0" placeholder="Your Email" style="height: 55px;">
-                                </div>
-                                <div class="col-12">
-                                    <input type="text" class="form-control bg-light border-0" placeholder="Subject" style="height: 55px;">
-                                </div>
-                                <div class="col-12">
-                                    <textarea class="form-control bg-light border-0" rows="5" placeholder="Message"></textarea>
-                                </div>
-                                <div class="col-12">
-                                    <button class="btn btn-primary w-100 py-3" type="submit">Send Message</button>
-                                </div>
+                        <div class="col-12 col-sm-7 h-100 d-flex flex-column">
+                            <div class="mt-auto p-4">
+                                <h3>Carlos Rodríguez</h3>
+                                <h6 class="fw-normal fst-italic text-primary mb-4">Especialista de Dermatología</h6>
+                                <p class="m-0">Dermatólogo experimentado que se especializa en tratar trastornos de la piel, cabello, uñas y membranas mucosas. Atiende tanto a adultos como a niños</p>
                             </div>
-                        </form>
+                            <div class="d-flex mt-auto border-top p-4">
+                                <a class="btn btn-lg btn-color btn-lg-square rounded-circle me-3" href="#"><i class="fab fa-twitter"></i></a>
+                                <a class="btn btn-lg btn-color btn-lg-square rounded-circle me-3" href="#"><i class="fab fa-facebook-f"></i></a>
+                                <a class="btn btn-lg btn-color btn-lg-square rounded-circle" href="#"><i class="fab fa-linkedin-in"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="team-item">
+                    <div class="row g-0 bg-light rounded overflow-hidden">
+                        <div class="col-12 col-sm-5 h-100">
+                            <img class="img-fluid h-100" src="img/team-2.jpg" style="object-fit: cover;">
+                        </div>
+                        <div class="col-12 col-sm-7 h-100 d-flex flex-column">
+                            <div class="mt-auto p-4">
+                                <h3>Javier Martínez</h3>
+                                <h6 class="fw-normal fst-italic text-primary mb-4">Especialista de Infectología</h6>
+                                <p class="m-0">Especializado en tratar infecciones difíciles de diagnosticar o tratar. Su enfoque está en enfermedades infecciosas y su manejo.</p>
+                            </div>
+                            <div class="d-flex mt-auto border-top p-4">
+                                <a class="btn btn-lg btn-color btn-lg-square rounded-circle me-3" href="#"><i class="fab fa-twitter"></i></a>
+                                <a class="btn btn-lg btn-color btn-lg-square rounded-circle me-3" href="#"><i class="fab fa-facebook-f"></i></a>
+                                <a class="btn btn-lg btn-color btn-lg-square rounded-circle" href="#"><i class="fab fa-linkedin-in"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="team-item">
+                    <div class="row g-0 bg-light rounded overflow-hidden">
+                        <div class="col-12 col-sm-5 h-100">
+                            <img class="img-fluid h-100" src="img/team-3.jpg" style="object-fit: cover;">
+                        </div>
+                        <div class="col-12 col-sm-7 h-100 d-flex flex-column">
+                            <div class="mt-auto p-4">
+                                <h3>Laura Pérez</h3>
+                                <h6 class="fw-normal fst-italic text-primary mb-4">Especialista de Gastroenterología</h6>
+                                <p class="m-0">Gastroenteróloga dedicada al estudio y tratamiento del sistema digestivo. Realiza procedimientos como colonoscopias, endoscopias y biopsias del hígado.</p>
+                            </div>
+                            <div class="d-flex mt-auto border-top p-4">
+                                <a class="btn btn-lg btn-color btn-lg-square rounded-circle me-3" href="#"><i class="fab fa-twitter"></i></a>
+                                <a class="btn btn-lg btn-color btn-lg-square rounded-circle me-3" href="#"><i class="fab fa-facebook-f"></i></a>
+                                <a class="btn btn-lg btn-color btn-lg-square rounded-circle" href="#"><i class="fab fa-linkedin-in"></i></a>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-    <!-- Contact End -->
+    <!-- Team End -->
 
 
     <!-- Footer Start -->
