--- a/index.html
+++ b/index.html
@@ -349,7 +349,7 @@
                 <div class="team-item">
                     <div class="row g-0 bg-light rounded overflow-hidden">
                         <div class="col-12 col-sm-5 h-100">
-                            <img class="img-fluid h-100" src="img/team-1.jpg" style="object-fit: cover; aspect-ratio: 16/9;">
+                            <img class="img-fluid h-100" src="img/team-1.jpg" style="object-fit: cover; aspect-ratio: 1;">
                         </div>
                         <div class="col-12 col-sm-7 h-100 d-flex flex-column">
                             <div class="mt-auto p-4">
@@ -368,7 +368,7 @@
                 <div class="team-item">
                     <div class="row g-0 bg-light rounded overflow-hidden">
                         <div class="col-12 col-sm-5 h-100">
-                            <img class="img-fluid h-100" src="img/team-2.jpg" style="object-fit: cover; aspect-ratio: 16/9;">
+                            <img class="img-fluid h-100" src="img/team-2.jpg" style="object-fit: cover; aspect-ratio: 1;">
                         </div>
                         <div class="col-12 col-sm-7 h-100 d-flex flex-column">
                             <div class="mt-auto p-4">
@@ -387,7 +387,7 @@
                 <div class="team-item">
                     <div class="row g-0 bg-light rounded overflow-hidden">
                         <div class="col-12 col-sm-5 h-100">
-                            <img class="img-fluid h-100" src="img/team-3.jpg" style="object-fit: cover; aspect-ratio: 16/9;">
+                            <img class="img-fluid h-100" src="img/team-3.jpg" style="object-fit: cover; aspect-ratio: 1;">
                         </div>
                         <div class="col-12 col-sm-7 h-100 d-flex flex-column">
                             <div class="mt-auto p-4">
