--- a/error.html
+++ b/error.html
@@ -103,7 +103,7 @@
                                 <a href="search.html" class="dropdown-item">Buscar</a>
                             </div>
                         </div>
-                        <a href="contact.html" class="nav-item nav-link active">Contacto</a>
+                        <a href="contact.html" class="nav-item nav-link">Contacto</a>
                     </div>
                 </div>
             </nav>
@@ -112,77 +112,27 @@
     <!-- Navbar End -->
 
 
-    <!-- Contact Start -->
-    <div class="container-fluid pt-5">
+    <div class="container-fluid py-5">
         <div class="container">
-            <div class="text-center mx-auto mb-5" style="max-width: 600px;">
-                <h5 class="d-inline-block text-primary text-uppercase border-bottom border-5">Contacto</h5>
-                <h1 class="display-4">Siéntase libre de contactarnos</h1>
-            </div>
-            <div class="row g-5 mb-5">
-                <div class="col-lg-4">
-                    <div class="bg-light rounded d-flex flex-column align-items-center justify-content-center text-center" style="height: 200px;">
-                        <div class="d-flex align-items-center justify-content-center btn-color rounded-circle mb-4" style="width: 100px; height: 70px; transform: rotate(-15deg);">
-                            <i class="fa fa-2x fa-location-arrow text-white" style="transform: rotate(15deg);"></i>
-                        </div>
-                        <h6 class="mb-0">Carretera Central Km 101, Matanzas, Cuba</h6>
+            <div class="row gx-5 d-flex flex-lg-row-reverse flex-row">
+                <div class="col-lg-7">
+                    <div class="mb-4">
+                        <h5 class="d-inline-block text-primary text-uppercase border-bottom border-5">Error</h5>
+                        <h1 class="display-4">Uhps...</h1>
                     </div>
+                    <p>Parece que esta sección aún se encuentra en desarrollo, regrese más tarde.</p>
                 </div>
-                <div class="col-lg-4">
-                    <div class="bg-light rounded d-flex flex-column align-items-center justify-content-center text-center" style="height: 200px;">
-                        <div class="d-flex align-items-center justify-content-center btn-color rounded-circle mb-4" style="width: 100px; height: 70px; transform: rotate(-15deg);">
-                            <i class="fa fa-2x fa-phone text-white" style="transform: rotate(15deg);"></i>
-                        </div>
-                        <h6 class="mb-0">+53 5 0994101</h6>
-                    </div>
-                </div>
-                <div class="col-lg-4">
-                    <div class="bg-light rounded d-flex flex-column align-items-center justify-content-center text-center" style="height: 200px;">
-                        <div class="d-flex align-items-center justify-content-center btn-color rounded-circle mb-4" style="width: 100px; height: 70px; transform: rotate(-15deg);">
-                            <i class="fa fa-2x fa-envelope-open text-white" style="transform: rotate(15deg);"></i>
-                        </div>
-                        <h6 class="mb-0">hospitalfaustino.mtz@infomed.sld.cu</h6>
-                    </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-12" style="height: 500px;">
-                    <div class="position-relative h-100">
-                        <iframe class="position-relative w-100 h-100"
-                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d5192.078036444757!2d-81.6009349329118!3d23.047494972851034!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88d2fc090fc104d1%3A0xbc0d2469be7baa45!2sHospital%20Faustino%20P%C3%A9rez.!5e0!3m2!1ses-419!2scu!4v1710186013616!5m2!1ses-419!2scu"
-                            frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false"
-                            tabindex="0"></iframe>
-                    </div>
-                </div>
-            </div>
-            <div class="row justify-content-center position-relative" style="margin-top: -200px; z-index: 1; display: none">
-                <div class="col-lg-8">
-                    <div class="bg-white rounded p-5 m-5 mb-0">
-                        <form>
-                            <div class="row g-3">
-                                <div class="col-12 col-sm-6">
-                                    <input type="text" class="form-control bg-light border-0" placeholder="Your Name" style="height: 55px;">
-                                </div>
-                                <div class="col-12 col-sm-6">
-                                    <input type="email" class="form-control bg-light border-0" placeholder="Your Email" style="height: 55px;">
-                                </div>
-                                <div class="col-12">
-                                    <input type="text" class="form-control bg-light border-0" placeholder="Subject" style="height: 55px;">
-                                </div>
-                                <div class="col-12">
-                                    <textarea class="form-control bg-light border-0" rows="5" placeholder="Message"></textarea>
-                                </div>
-                                <div class="col-12">
-                                    <button class="btn btn-primary w-100 py-3" type="submit">Send Message</button>
-                                </div>
-                            </div>
-                        </form>
+                <div class="col-lg-5 mb-5 mb-lg-0" style="min-height: 500px;">
+                    <div class="position-relative h-100" style="position: relative; display: flex;flex-direction: column;
+                        justify-content: center; align-items: center;">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="80%" height="80%" viewBox="0 0 24 24"><path fill="currentColor" d="m21.67 18.17l-5.3-5.3h-.99l-2.54 2.54v.99l5.3 5.3c.39.39 1.02.39 1.41 0l2.12-2.12a.996.996 0 0 0 0-1.41m-2.83 1.42l-4.24-4.24l.71-.71l4.24 4.24z"/><path fill="currentColor" d="m17.34 10.19l1.41-1.41l2.12 2.12a3 3 0 0 0 0-4.24l-3.54-3.54l-1.41 1.41V1.71l-.7-.71l-3.54 3.54l.71.71h2.83l-1.41 1.41l1.06 1.06l-2.89 2.89l-4.13-4.13V5.06L4.83 2.04L2 4.87L5.03 7.9h1.41l4.13 4.13l-.85.85H7.6l-5.3 5.3a.996.996 0 0 0 0 1.41l2.12 2.12c.39.39 1.02.39 1.41 0l5.3-5.3v-2.12l5.15-5.15zm-7.98 5.15l-4.24 4.24l-.71-.71l4.24-4.24z"/></svg>
+                        <img style="display: none;" class="position-absolute w-100 h-100 rounded" src="img/about.jpg" style="object-fit: cover; aspect-ratio: 16/9">
                     </div>
                 </div>
             </div>
         </div>
     </div>
-    <!-- Contact End -->
+    <!-- About End -->
 
 
     <!-- Footer Start -->
