--- a/about.html
+++ b/about.html
@@ -69,11 +69,11 @@
 
 
     <!-- Navbar Start -->
-   <div class="container-fluid sticky-top bg-white shadow-sm">
+    <div class="container-fluid sticky-top bg-white shadow-sm">
         <div class="container">
             <nav class="navbar navbar-expand-lg bg-white navbar-light py-3 py-lg-0">
                 <a href="index.html" class="navbar-brand">
-                    <h1 class="m-0 text-uppercase arial-1 d-flex align-items-center flex-row" style="font-size: 0.9cm !important;"><img src="icon/Logo.png" class="me-2" style="height: 60px"><div class="d-none d-xl-flex align-items-center">HOSPITAL FAUSTINO</div></h1>
+                    <h1 class="m-0 text-uppercase arial-1 d-flex align-items-center flex-row" style="font-size: 0.9cm !important;"><img src="icon/Logo.png" class="me-2" style="height: 60px"><div class="d-none d-xl-flex align-items-center">HOSPITAL FAUSTINO PÉREZ</div></h1>
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
                     <span class="navbar-toggler-icon"></span>
@@ -87,8 +87,8 @@
                         <div class="nav-item dropdown">
                             <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Docencia</a>
                             <div class="dropdown-menu m-0">
-                                <a href="pregrado.html" class="dropdown-item">Pregrado</a>
-                                <a href="posgrado.html" class="dropdown-item">Posgrado</a>
+                                <a href="error.html" class="dropdown-item">Pregrado</a>
+                                <a href="error.html" class="dropdown-item">Posgrado</a>
                             </div>
                         </div>
                         <div class="nav-item dropdown" style="display: none;">
@@ -144,7 +144,7 @@
                         <div class="col-sm-3 col-6">
                             <div class="bg-light text-center rounded-circle py-4">
                                 <i class="fa fa-3x fa-microscope text-primary mb-3"></i>
-                                <h6 class="mb-0">Precisión<small class="d-block text-primary">Examenes</small></h6>
+                                <h6 class="mb-0">Precisión<small class="d-block text-primary">Exámenes</small></h6>
                             </div>
                         </div>
                         <div class="col-sm-3 col-6">
@@ -394,10 +394,10 @@
                 <div class="col-lg-3 col-md-6">
                     <h4 class="d-inline-block text-primary text-uppercase border-bottom border-5 border-secondary mb-4">Síguenos</h4>
                     <div class="d-flex">
-                        <a class="btn btn-lg btn-color btn-lg-square rounded-circle me-2" target="_blank" href="#"><i class="fab fa-twitter"></i></a>
+                        <a class="btn btn-lg btn-color btn-lg-square rounded-circle me-2" style="display: none;" target="_blank" href="#"><i class="fab fa-twitter"></i></a>
                         <a class="btn btn-lg btn-color btn-lg-square rounded-circle me-2" target="_blank" href="https://www.facebook.com/people/Hospital-Provincial-Cl%C3%ADnico-Quir%C3%BArgico-Docente-Faustino-P%C3%A9rez/100091764969888/"><i class="fab fa-facebook-f"></i></a>
-                        <a class="btn btn-lg btn-color btn-lg-square rounded-circle me-2" target="_blank" href="#"><i class="fab fa-linkedin-in"></i></a>
-                        <a class="btn btn-lg btn-color btn-lg-square rounded-circle" target="_blank" href="#"><i class="fab fa-instagram"></i></a>
+                        <a class="btn btn-lg btn-color btn-lg-square rounded-circle me-2" style="display: none;"  target="_blank" href="#"><i class="fab fa-linkedin-in"></i></a>
+                        <a class="btn btn-lg btn-color btn-lg-square rounded-circle" style="display: none;"  target="_blank" href="#"><i class="fab fa-instagram"></i></a>
                     </div>
                 </div>
             </div>
