--- a/structure.html
+++ b/structure.html
@@ -72,7 +72,7 @@
         <div class="container">
             <nav class="navbar navbar-expand-lg bg-white navbar-light py-3 py-lg-0">
                 <a href="index.html" class="navbar-brand">
-                    <h1 class="m-0 text-uppercase arial-1 d-flex align-items-center flex-row" style="font-size: 0.9cm !important;"><img src="icon/Logo.png" class="me-2" style="height: 60px"><div class="d-none d-xl-flex align-items-center">HOSPITAL FAUSTINO</div></h1>
+                    <h1 class="m-0 text-uppercase arial-1 d-flex align-items-center flex-row" style="font-size: 0.9cm !important;"><img src="icon/Logo.png" class="me-2" style="height: 60px"><div class="d-none d-xl-flex align-items-center">HOSPITAL FAUSTINO PÉREZ</div></h1>
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
                     <span class="navbar-toggler-icon"></span>
@@ -86,8 +86,8 @@
                         <div class="nav-item dropdown">
                             <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Docencia</a>
                             <div class="dropdown-menu m-0">
-                                <a href="pregrado.html" class="dropdown-item">Pregrado</a>
-                                <a href="posgrado.html" class="dropdown-item">Posgrado</a>
+                                <a href="error.html" class="dropdown-item">Pregrado</a>
+                                <a href="error.html" class="dropdown-item">Posgrado</a>
                             </div>
                         </div>
                         <div class="nav-item dropdown" style="display: none;">
@@ -111,6 +111,26 @@
     </div>
     <!-- Navbar End -->
 
+    <!-- Especialidades Start-->
+    <div class="container-fluid py-5">
+        <div class="container">
+            <div class="row gx-5">
+				<div class="text-center">
+					<h5 class="d-inline-block text-primary text-uppercase border-bottom border-5">Estructura</h5>
+				</div>
+              <div class="row mb-5 mb-lg-0" style="display: flex;flex-direction: column;justify-content: center; align-items: center">
+                    <div class="mb-4 text-center">
+                        <h1 class="display-4">Estructura organizativa</h1>
+                    </div>
+                    <div class="row gx-5  px-lg-5" style="padding-left: 2rem;">
+                        <img src="img/organigrama.png" alt="" srcset="">
+                    </div>
+                    
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- Especialidades End-->
 
     <!-- Team Start -->
     <div class="container-fluid py-5">
@@ -129,7 +149,7 @@
                             <div class="mt-auto p-4">
                                 <h3>Carlos Rodríguez</h3>
                                 <h6 class="fw-normal fst-italic text-primary mb-4">Especialista de Dermatología</h6>
-                                <p class="m-0">Dermatólogo experimentado que se especializa en tratar trastornos de la piel, cabello, uñas y membranas mucosas. Atiende tanto a adultos como a niños</p>
+                                <p class="m-0">Dermatólogo experimentado que se especializa en tratar trastornos de la piel, cabello, uñas y membranas mucosas. Atiende tanto a adultos como a niños.</p>
                             </div>
                             <div class="d-flex mt-auto border-top p-4">
                                 <a class="btn btn-lg btn-color btn-lg-square rounded-circle me-3" href="#"><i class="fab fa-twitter"></i></a>
@@ -216,10 +236,10 @@
                 <div class="col-lg-3 col-md-6">
                     <h4 class="d-inline-block text-primary text-uppercase border-bottom border-5 border-secondary mb-4">Síguenos</h4>
                     <div class="d-flex">
-                        <a class="btn btn-lg btn-color btn-lg-square rounded-circle me-2" target="_blank" href="#"><i class="fab fa-twitter"></i></a>
+                        <a class="btn btn-lg btn-color btn-lg-square rounded-circle me-2" style="display: none;" target="_blank" href="#"><i class="fab fa-twitter"></i></a>
                         <a class="btn btn-lg btn-color btn-lg-square rounded-circle me-2" target="_blank" href="https://www.facebook.com/people/Hospital-Provincial-Cl%C3%ADnico-Quir%C3%BArgico-Docente-Faustino-P%C3%A9rez/100091764969888/"><i class="fab fa-facebook-f"></i></a>
-                        <a class="btn btn-lg btn-color btn-lg-square rounded-circle me-2" target="_blank" href="#"><i class="fab fa-linkedin-in"></i></a>
-                        <a class="btn btn-lg btn-color btn-lg-square rounded-circle" target="_blank" href="#"><i class="fab fa-instagram"></i></a>
+                        <a class="btn btn-lg btn-color btn-lg-square rounded-circle me-2" style="display: none;"  target="_blank" href="#"><i class="fab fa-linkedin-in"></i></a>
+                        <a class="btn btn-lg btn-color btn-lg-square rounded-circle" style="display: none;"  target="_blank" href="#"><i class="fab fa-instagram"></i></a>
                     </div>
                 </div>
             </div>
