--- a/service.html
+++ b/service.html
@@ -427,7 +427,7 @@
             <div class="row g-5">
                 <div class="col-md-6 text-center text-md-start">
                     <p class="mb-md-0">&copy;
-					 <a class="text-primary" href="https://www.sld.cu/">Infomed</a>. Hospital Faustino Perez.</p>
+					 <a class="text-primary" href="https://www.sld.cu/">Infomed</a>. Hospital Faustino Pérez.</p>
                 </div>
                 <div class="col-md-6 text-center text-md-end">
                     <p class="mb-0">Diseñado por <a class="text-primary" href="https://htmlcodex.com">Creando</a></p>
