fixed ortographic error

--- a/service.html
+++ b/service.html
@@ -292,7 +292,7 @@
                             <li>Estamatología</li>
                             <li>Farmacia</li>
                             <li>Gastroenterología</li>
-                            <li>Geriatría</li>
+                            <li>Geriatria</li>
                             <li>Hematología</li>
                             <li>Imagenología</li>
                             <li>Inmunología</li>
