teaching and orgChart added

--- a/about.html
+++ b/about.html
@@ -39,7 +39,7 @@
                     <div class="d-inline-flex align-items-center">
                         <a class="text-decoration-none text-body pe-3 text-grow" href="tel:+5350994101"><i class="bi bi-telephone me-2"></i>+53 5 0994101</a>
                         <span class="text-body">|</span>
-                        <a class="text-decoration-none text-body px-3 text-grow" href="mailto:hospitalfaustino.mtz@infomed.sld.cu"><i class="bi bi-envelope me-2"></i>hospitalfaustino.mtz@infomed.sld.cu</a>
+                        <a class="text-decoration-none text-body px-3 text-grow" href="mailto:infohfp.mtz@infomed.sld.cu"><i class="bi bi-envelope me-2"></i>infohfp.mtz@infomed.sld.cu</a>
                     </div>
                 </div>
                 <div class="col-md-4 text-center text-lg-end">
@@ -84,10 +84,11 @@
                         <a href="service.html" class="nav-item nav-link">Servicios</a>
                         <a href="structure.html" class="nav-item nav-link">Estructura</a>
                         <div class="nav-item dropdown">
-                            <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Docencia</a>
+                            <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Páginas</a>
                             <div class="dropdown-menu m-0">
-                                <a href="error.html" class="dropdown-item">Pregrado</a>
-                                <a href="error.html" class="dropdown-item">Posgrado</a>
+                                <a href="teaching.html" class="dropdown-item">Docencia</a>
+                                <a href="pregrade.html" class="dropdown-item">Pregrado</a>
+                                <a href="postgrade.html" class="dropdown-item">Postgrado</a>
                             </div>
                         </div>
                         <div class="nav-item dropdown" style="display: none;">
@@ -359,7 +360,6 @@
     </div>
     <!-- Team End -->
 
-
     <!-- Footer Start -->
     <div class="container-fluid bg-dark text-light mt-5 py-5">
         <div class="container py-5">
@@ -368,8 +368,8 @@
                     <h4 class="d-inline-block text-primary text-uppercase border-bottom border-5 border-secondary mb-4">Contáctanos</h4>
                     <p class="mb-4">Conéctate con nosotros para cualquier consulta</p>
                     <p class="mb-2"><i class="fa fa-map-marker-alt text-primary me-3"></i>Carretera Central Km 101, Matanzas, Cuba</p>
-                    <a class="mb-2 text-light text-grow" href="mailto:hospitalfaustino.mtz@infomed.sld.cu"><i class="fa fa-envelope text-primary me-1"></i>hospitalfaustino.mtz@infomed.sld.cu</a>
-                    <a class="mb-0 text-light text-grow" href="tel:+5350994101"><i class="fa fa-phone-alt text-primary me-1"></i>+53 5 0994101</a>
+                    <a class="mb-2 text-light text-grow" href="mailto:infohfp.mtz@infomed.sld.cu"><i class="fa fa-envelope text-primary me-3"></i>infohfp.mtz@infomed.sld.cu</a>
+                    <a class="mb-0 text-light text-grow" href="tel:+5350994101"><i class="fa fa-phone-alt text-primary me-3"></i>+53 5 0994101</a>
                 </div>
                 <div class="col-lg-3 col-md-6">
                     <h4 class="d-inline-block text-primary text-uppercase border-bottom border-5 border-secondary mb-4">Enlaces Rápidos</h4>
@@ -378,6 +378,9 @@
                         <a class="text-light text-grow mb-2" href="about.html"><i class="fa fa-angle-right me-2"></i>Nosotros</a>
                         <a class="text-light text-grow mb-2" href="service.html"><i class="fa fa-angle-right me-2"></i>Servicios</a>
                         <a class="text-light text-grow mb-2" href="structure.html"><i class="fa fa-angle-right me-2"></i>Nuestro Equipo</a>
+                        <a class="text-light text-grow mb-2" href="teaching.html"><i class="fa fa-angle-right me-2"></i>Docencia</a>
+                        <a class="text-light text-grow mb-2" href="pregrade.html"><i class="fa fa-angle-right me-2"></i>Pregrado</a>
+                        <a class="text-light text-grow mb-2" href="postgrade.html"><i class="fa fa-angle-right me-2"></i>Postgrado</a>
                         <a class="text-light text-grow" href="contact.html"><i class="fa fa-angle-right me-2"></i>Contactos</a>
                     </div>
                 </div>
@@ -407,7 +410,7 @@
             <div class="row g-5">
                 <div class="col-md-6 text-center text-md-start">
                     <p class="mb-md-0">&copy;
-					 <a class="text-primary" href="https://www.sld.cu/">Infomed</a>. Hospital Faustino Pérez.</p>
+                    <a class="text-primary" href="https://www.sld.cu/">Infomed</a>. Hospital Faustino Pérez.</p>
                 </div>
                 <div class="col-md-6 text-center text-md-end">
                     <p class="mb-0">Diseñado por <a class="text-primary" href="https://htmlcodex.com">Creando</a></p>
