--- a/about.html
+++ b/about.html
@@ -5,8 +5,8 @@
     <meta charset="utf-8">
     <title>Hospital Faustino Pérez</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <meta content="Free HTML Templates" name="keywords">
-    <meta content="Free HTML Templates" name="description">
+    <meta content="Hospital Faustino Pérez, Hospital Faustino Matanzas, Hospital Matanzas, HFP, HFP Matanzas, Hospital Faustino Cuba, Hospital Faustino" name="keywords">
+    <meta content="Hospital Clínico Quirúrgico Docente Faustino Pérez" name="description">
 
     <!-- Favicon -->
     <link href="icon/Logo-web-icon.png" rel="icon">
@@ -195,8 +195,8 @@
             <div class="row gx-5 mb-lg-5">
                 <div class="col-lg-7">
                     <div class="mb-4">
-                        <h5 class="d-inline-block text-primary text-uppercase border-bottom border-5">Historía&nbsp;&nbsp;</h5>
-                        <h1 class="display-4">Nuestra Historía</h1>
+                        <h5 class="d-inline-block text-primary text-uppercase border-bottom border-5">Historia&nbsp;&nbsp;</h5>
+                        <h1 class="display-4">Nuestra Historia</h1>
                     </div>
                     <p>Al inicio de los años 80 comienza la ejecución del hospital.</p>
                     <p>Para Marzo de 1983 comenzó el montaje de las estructuras principales, en sus inicios la obra estuvo a cargo de la ECOA 10 , posteriormente convertida en contingente.</p>
