--- a/service.html
+++ b/service.html
@@ -5,8 +5,8 @@
     <meta charset="utf-8">
     <title>Hospital Faustino Pérez</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <meta content="Free HTML Templates" name="keywords">
-    <meta content="Free HTML Templates" name="description">
+    <meta content="Hospital Faustino Pérez, Hospital Faustino Matanzas, Hospital Matanzas, HFP, HFP Matanzas, Hospital Faustino Cuba, Hospital Faustino" name="keywords">
+    <meta content="Hospital Clínico Quirúrgico Docente Faustino Pérez" name="description">
 
     <!-- Favicon -->
     <link href="icon/Logo-web-icon.png" rel="icon">
