the last picture in the organigram

--- a/structure.html
+++ b/structure.html
@@ -225,7 +225,7 @@
               <li class="department "  >
                 <span class="lvl-b">
                     <p><strong>Subdirectora</strong></p>
-                    <img loading="lazy" src="icon/Logo.png" class="icon-lvl-b" width="100px" height="100px" alt="">
+                    <img loading="lazy" src="img/organigram_6.jpg" class="icon-lvl-b" width="100px" height="100px" alt="">
                     </span>
                 <ul class="sections">
                   <li class="section"> <span>
