--- a/contact.html
+++ b/contact.html
@@ -88,9 +88,9 @@
                         <a href="service.html" class="nav-item nav-link">Servicios</a>
                         <a href="structure.html" class="nav-item nav-link">Estructura</a>
                         <div class="nav-item dropdown">
-                            <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Páginas</a>
+                            <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Docencia</a>
                             <div class="dropdown-menu m-0">
-                                <a href="teaching.html" class="dropdown-item">Docencia</a>
+                                <a href="teaching.html" class="dropdown-item">Más información</a>
                                 <a href="pregrade.html" class="dropdown-item">Pregrado</a>
                                 <a href="postgrade.html" class="dropdown-item">Postgrado</a>
                             </div>
