--- a/postgrade.html
+++ b/postgrade.html
@@ -244,7 +244,7 @@
 					 <a class="text-primary" href="https://www.sld.cu/">Infomed</a>. Hospital Faustino Pérez.</p>
                 </div>
                 <div class="col-md-6 text-center text-md-end">
-                    <p class="mb-0">Diseñado por <a class="text-primary" href="https://htmlcodex.com">Creando</a></p>
+                    <p class="mb-0">Diseñado por <a class="text-primary" href="https://www.facebook.com/profile.php?id=61554470506329&mibextid=ZbWKwL">Creando</a></p>
                 </div>
             </div>
         </div>
